@@ -8,3 +8,4 @@
 0.05: Show correct percentage values in circles
       Show humidity as weather circle data
 0.06: Allow settings empty circles
+      Support to choose between humidity and wind speed for weather circle progress
